k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dad-diaberto-showcase
  labels:
    app: dad-diaberto-showcase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dad-diaberto-showcase
  template:
    metadata:
      labels:
        app: dad-diaberto-showcase
    spec:
      containers:
        - name: app
          image: registry-172.22.21.115.sslip.io/teachers/dad-diaberto-showcase:v1.0.2026-2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
