k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dad-diaberto-showcase
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: dad-diaberto-2026-172.22.21.253.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dad-diaberto-showcase
                port:
                  number: 80
